deploy/nrp/runtime-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lunar-analyst
  namespace: lunar-analyst
spec:
  selector:
    app: lunar-analyst
  ports:
    - name: http
      port: 80
      targetPort: http
